# NovaBattalionTank

./: .gitignore  CMakeLists.txt  NodeEditor.json  NovaBattalionTank.pulseproject  PulseEditorGUI.ini  README.md  imgui.ini
Modules/Interface/: main.PulseScript
PulseEngineEditor/: Engine-config.ini  enginegm.gamemode
PulseEngineEditor/Content/Entities/: Floor.pEntity  PlayerTank.pEntity
PulseEngineEditor/Content/HUD/: MainMenu.widget
PulseEngineEditor/Content/Levels/: LVL_TestZone.pmap
PulseEngineEditor/Content/Materials/: PlayerTank.mat
PulseEngineEditor/Content/Models/: chassis.fbx.pmesh  wheels.fbx.pmesh
PulseEngineEditor/Content/Models/Floor/: Floor.mat  tron grid floor.fbx  tron grid floor.fbx.pmesh
PulseEngineEditor/Content/Models/Tanks/: Tanque .fbx.pmesh
PulseEngineEditor/Content/Scripts/: CameraCin.cpp  CameraCin.h  FloorInit.cpp  FloorInit.h  TankController.cpp  TankController.h
PulseEngineEditor/Content/Shaders/: Destroy.frag  Destroy.vert
PulseEngineEditor/EngineConfig/: inputConfig.pconfig
PulseEngineEditor/EngineConfig/Guid/: guidCollectionEntities.puid  guidCollectionMaterials.puid  guidCollectionMeshes.puid  guidCollectionShaders.puid  guidCollectionTextures.puid
PulseEngineEditor/EngineConfig/Materials/: StandardLit.mat
PulseEngineEditor/EngineConfig/models/Primitives/: Sphere.pEntity  primitiveCube.pmesh  primitiveCylinder.pmesh  primitiveSphere.pmesh
PulseEngineEditor/EngineConfig/shaders/: basic.frag  toon.frag
PulseEngineEditor/PulseEngineEditor/Content/HUD/: MainMenu.widget
PulseEngineEditor/Scenes/: defaultMap.pmap  defaultMap1.pmap
